@@ -36,6 +36,7 @@ import net.grinder.common.GrinderBuild;
 import net.grinder.common.GrinderException;
 import net.grinder.common.GrinderProperties;
 import net.grinder.common.Logger;
+import net.grinder.common.Test;
 import net.grinder.common.processidentity.WorkerProcessReport;
 import net.grinder.communication.ClientSender;
 import net.grinder.communication.CommunicationException;
@@ -54,9 +55,12 @@ import net.grinder.engine.process.jython.JythonScriptEngine;
 import net.grinder.messages.console.RegisterTestsMessage;
 import net.grinder.script.InvalidContextException;
 import net.grinder.statistics.ExpressionView;
+import net.grinder.statistics.StatisticsServices;
 import net.grinder.statistics.StatisticsServicesImplementation;
+import net.grinder.statistics.StatisticsSet;
 import net.grinder.statistics.StatisticsTable;
 import net.grinder.statistics.TestStatisticsMap;
+import net.grinder.statistics.StatisticsIndexMap.LongIndex;
 import net.grinder.util.JVM;
 import net.grinder.util.thread.BooleanCondition;
 import net.grinder.util.thread.Condition;
@@ -242,9 +246,11 @@ final class GrinderProcess {
 
     dataWriter.print("Thread, Run, Test, Start time (ms since Epoch)");
 
+    final StatisticsServices statisticsServices =
+      m_context.getStatisticsServices();
+
     final ExpressionView[] detailExpressionViews =
-      m_context.getStatisticsServices()
-      .getDetailStatisticsView().getExpressionViews();
+      statisticsServices.getDetailStatisticsView().getExpressionViews();
 
     for (int i = 0; i < detailExpressionViews.length; ++i) {
       dataWriter.print(", " + detailExpressionViews[i].getDisplayName());
@@ -368,10 +374,19 @@ final class GrinderProcess {
 
     logger.output("Final statistics for this process:");
 
+    final LongIndex periodIndex =
+      statisticsServices.getStatisticsIndexMap().getLongIndex("period");
+
+    m_accumulatedStatistics.new ForEach() {
+      protected void next(Test test, StatisticsSet statistics) {
+        statistics.setValue(periodIndex, elapsedTime);
+      }
+    }
+    .iterate();
+
     final StatisticsTable statisticsTable =
-      new StatisticsTable(
-        m_context.getStatisticsServices().getSummaryStatisticsView(),
-        m_accumulatedStatistics);
+      new StatisticsTable(statisticsServices.getSummaryStatisticsView(),
+                          m_accumulatedStatistics);
 
     statisticsTable.print(logger.getOutputLogWriter());
 
