@@ -59,6 +59,9 @@ The Grinder 3.1.1 (not yet released)
   https.protocols Java system properties. Thanks to Lorance Stinson for the
   report and for testing various candidate patches.
 
+  Fulfill feature request 1677083 - Agent should produce TPS when run without
+  Console. Thanks to MattyM76 for requesting this feature.
+
 
 The Grinder 3.1
 ---------------
